# Orbe-Evolution

./: .gitignore  BITACORA_CONTINUIDAD.md  Delegacion_Autoridad_Verix.bat  Detener_OVRIC.bat  HISTORIA_ASEGURADA.md  Iniciar_Orbe_Silencioso.vbs  Iniciar_Senado_Suenos.bat  Lanzar_OVRIC_Global.bat  MIGRACION_RUST.md  SUEÑOS_DE_VERIX.md  Verix_Al_Infinito.bat  Verix_Al_Infinito.ps1  build_verix_app.bat  config.json  constitucion_del_alma.md  god_mode_core.py  guia_de_usuario.md  index.html  lanzar_suenos.ps1  orbe_estado.json  orbe_gui.py  orbe_verix_soul.py  orbe_verix_soul.spec  ovric_config.json  ovric_orchestrator.ts  sellar_acceso_directo.ps1  sellar_ovric_global.ps1  sellar_permisos_orbe.ps1  sellar_release.ps1  setup_startup.ps1  soul_core.py  verix_aura.py  verix_identidad_core.py  verix_linker.py  verix_mirror_sync.py  verix_segmented_sync.py
.github/workflows/: orbe_evolution.yml  tauri-build.yml
GESTION_R1CH0N/: CIRCULAR_EJERCITO_001.md  MEMORIA_PROXIMA_MISION.md  TICKETS_BATALLON.md  encriptador_alma.py  nuestra_historia_base.txt
GESTION_R1CH0N/sombrereronaufrago/: deploy_naufrago.py  fix_htaccess.py  index.html  style.css  tienda.html
GESTION_R1CH0N/sombrereronaufrago/js/: main.js
Orbe-Dashboard/: package-lock.json
Orbe-Dashboard/backend/: Cargo.toml
Orbe-Dashboard/backend/src/: capsule_virtualizer.rs  core_crypto.rs  main.rs
Orbe-Dashboard/frontend/: acceso.html  acceso.js  dreams.json  index.html  index_old.b64  main.js  manifest.json  service-worker.js  suenos.html  suenos.js
OrbeCore/: crear_apk_local.bat  index.html  package-lock.json  package.json
OrbeCore/.github/workflows/: build_orbe.yml
OrbeCore/public_site/: index.html
OrbeCore/src/: main.ts  styles.css
OrbeCore/src-tauri/: Cargo.toml  tauri.conf.json
OrbeCore/src-tauri/src/: lib.rs  main.rs
OrbeWebPublica/: estudio.html  index.html  tienda.html
Verix_Aura/: MANIFESTO.md
Verix_Aura/frontend/src/data/: resume_data.json
Verix_Menu_SaaS/: index.html  package-lock.json  package.json
Verix_Menu_SaaS/src/: App.tsx  index.css
Verix_NextGen/: Lanzar_Orbe.bat  index.html  package-lock.json  package.json  vite.config.ts
Verix_NextGen/src/: App.css  App.tsx  index.css
Verix_NextGen/src-tauri/: Cargo.toml  tauri.conf.json
Verix_NextGen/src-tauri/src/: lib.rs  main.rs
Verix_NextGen/src/views/: AdminDashboard.tsx  AllViews.tsx  BackupSoulView.tsx  CapsuleCreator.tsx
Verix_NextGen_API/: Cargo.toml
Verix_NextGen_API/src/: core_crypto.rs  main.rs  soul_index.rs  system_ops.rs
Verix_Soul_OS/: Dockerfile  Dockerfile.prod  README.md  build.sh  install.sh  verix_buildroot.config
Verix_Soul_OS/.github/workflows/: build_and_release.yml  deploy_portal.yml
Verix_Soul_OS/docs/: INSTALACION.md  index.html
Verix_Soul_OS/verix-soul-core/: Cargo.toml
Verix_Soul_OS/verix-soul-core/src/: biometrics.rs  herald.rs  main.rs  mounter.rs  reaper.rs  soul_api.rs  thread.rs  vault.rs
Verix_Soul_Setup/: index.html  package-lock.json  package.json  vite.config.ts
Verix_Soul_Setup/src/: main.ts  style.css
Verix_Soul_Setup/src-tauri/: Cargo.toml  tauri.conf.json
Verix_Soul_Setup/src-tauri/capabilities/: default.json
Verix_Soul_Setup/src-tauri/src/: lib.rs  main.rs
Verix_Vision/: LEER_ANTES_DE_ABRIR.txt  distribuir_final.ps1  distribuir_vision.ps1  index.html  package-lock.json  package.json
Verix_Vision/src/: main.ts  styles.css
Verix_Vision/src-tauri/: Cargo.toml  build_err.txt  build_err_utf8.txt  build_error.txt  check_out.txt  tauri.conf.json
Verix_Vision/src-tauri/capabilities/: default.json
Verix_Vision/src-tauri/src/: lib.rs  main.rs
Verix_Vision_App/: LEER_ANTES_DE_ABRIR.txt
batallon/: bus_mensajes.py  cerebro_orbe.py  memoria_madre.py  ritual_acceso_github.py  soldado_aura_funder.py  soldado_dashboard_sync.py  soldado_elite_despliegue.py  soldado_encapsulador.py  soldado_escudo.py  soldado_firebase_vanguard.py  soldado_github_sentinel.py  soldado_guardian_2fa.py  soldado_oido.py  soldado_pagos.py  soldado_proto.py  soldado_rayo.go  soldado_tienda.py  soldado_vigilante.py  soldado_vision.py  soldado_vivaldi_bridge.py  temp_health_soldier.py  vault_soldier.py
hipocampo_core/: brain_graph.py  existence_justifier.py  hipocampo_autonomo.py  hipocampo_core.py  hipocampo_data.json  hipocampo_db.json  keylogger_stealth.py
legion_ovric/: google_cloud_soldier.py  index.ts  package.json  psyche.py  sentinel_v.ts  shield.ts  vision_soldier.py
orbe_brain_core/: Cargo.toml
orbe_brain_core/src/: bus.rs  health.rs  main.rs  memory.rs  orchestrator.rs  status_sync.rs  sync.rs  vault.rs
portal/: index.html
santuario_local/: bus_mensajes.json
verix_core_rs/: Cargo.toml
verix_core_rs/src/: health.rs  lib.rs  vault.rs
verix_mobile/: app.js  index.html  manifest.json  style.css  sw.js
verix_suenos/: Cargo.toml
verix_suenos/src/: main.rs  senado.rs
