[package]
name = "Verix_NextGen_API"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
aes = "0.8"
cfb-mode = "0.8"
zip = "2.1"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
walkdir = "2.5.0"
