[package]
name = "orbe_brain_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
sha2 = "0.10"
chrono = "0.4"
colored = "2.1"
aes-gcm = "0.10"
hmac = "0.12"
whoami = "1.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
