[package]
name = "backend"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
sysinfo = "0.30.7"
zip = "2.1.3"
aes = "0.8.4"
cfb-mode = "0.8.2"
sha2 = "0.10.8"
rand = "0.8.5"
walkdir = "2.5.0"

