[package]
name = "verix-soul-core"
version = "0.1.0"
edition = "2021"
authors = ["Ricardo Rubén Céspedez (Richon) <antigravityx>"]
description = "Verix Soul OS Core Daemon - The Vault, The Herald, The Thread"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time & Utils
chrono = "0.4"
anyhow = "1.0"

# Kernel / POSIX syscalls (para PID 1: montaje, señales, zombie reaping)
nix = { version = "0.29", features = ["signal", "process", "mount"] }
libc = "0.2"

[profile.release]
# Optimizacion maxima de tamaño para la imagen del OS
opt-level = "z"      # Priorizar tamaño sobre velocidad
lto = true           # Link Time Optimization
codegen-units = 1    # Un solo codigo de generacion (mas pequeno)
strip = true         # Eliminar simbolos de debug
panic = "abort"      # Sin stack unwinding (mas liviano)
