[package]
name = "verix-soul-core"
version = "0.2.0"
edition = "2021"
authors = ["Ricardo Rubén Céspedez (Richon) <antigravityx>"]
description = "Verix Soul OS Core Daemon - The Vault, The Herald, The Thread"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Telemetría
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# Kernel / POSIX syscalls (PID 1: montaje, señales)
nix = { version = "0.29", features = ["signal", "process", "mount"] }
libc = "0.2"

# HTTP Client (para comunicar con Ollama)
reqwest = { version = "0.12", features = ["json"] }

# HTTP Server (Soul API en puerto 7777)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[profile.release]
# Optimización máxima de tamaño para imagen del OS
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
